--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 
   <section id="home" class="section home">
     <h1>Hi, I'm Shirisha 👋</h1>
-    <p>Web Developer | Backend Enthusiast | Lifelong Learner</p>
+    <p>Web Developer | Backend Enthusiast | Lifelong Learner | Software developer</p>
     <p>
       <img src="" alt="">
   </section>
