--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     <section id="home">
         <div class="hero-content">
             <h1>HELLO, I'M SHIRISHA BASANI</h1>
-            <p>A passionate designer & developer creating fun and engaging digital experiences with a cartoon twist!</p>
+            <p>A passionate designer & developer creating fun and engaging digital experiences with code!</p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
         <div class="cartoon-character"></div>
@@ -37,7 +37,7 @@
                 <div class="skill-icon">
                     <i class="fas fa-pencil-alt"></i>
                 </div>
-                <h3>Cartoon Design</h3>
+                <h3>Java</h3>
                 <p>Creating unique and engaging cartoon characters and illustrations that bring stories to life.</p>
             </div>
             <div class="skill-card">
@@ -58,7 +58,7 @@
                 <div class="skill-icon">
                     <i class="fas fa-gamepad"></i>
                 </div>
-                <h3>Animation</h3>
+                <h3>React.Js</h3>
                 <p>Creating smooth and engaging animations that enhance user interaction and storytelling.</p>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <span><i class="far fa-calendar"></i> June 15, 2023</span>
                     <span><i class="far fa-folder"></i> TO-DO APP</span>
                 </div>
-                <h3>Animated Portfolio Website</h3>
+                <h3>To Do App</h3>
                 <p>Created a fully responsive portfolio website with custom cartoon animations and interactive elements. The project involved character design, motion graphics, and front-end development using HTML, CSS, and JavaScript.</p>
                 <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
             </div>
@@ -99,7 +99,7 @@
                     <span><i class="far fa-calendar"></i> April 22, 2023</span>
                     <span><i class="far fa-folder"></i> Currency Converter</span>
                 </div>
-                <h3>Cartoon Character Series</h3>
+                <h3>Currency Converter</h3>
                 <p>Designed and illustrated a series of original cartoon characters for a children's educational app. Each character has unique personality traits and animations that help engage young learners with the content.</p>
                 <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
             </div>
@@ -108,7 +108,7 @@
                     <span><i class="far fa-calendar"></i> February 10, 2023</span>
                     <span><i class="far fa-folder"></i> Crud Application</span>
                 </div>
-                <h3>Interactive Storybook Game</h3>
+                <h3>Crud Application</h3>
                 <p>Developed an interactive storybook game where players make choices that affect the narrative outcome. The project combined illustration, animation, and game logic to create an immersive storytelling experience.</p>
                 <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
             </div>
@@ -123,7 +123,7 @@
             <a href="#"><i class="fab fa-dribbble"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
-        <p>&copy; 2023 Cartoon Portfolio. All rights reserved.</p>
+        <p>&copy; 2023 Shirisha Portfolio. All rights reserved.</p>
     </footer>
 
     <script src="./Main.js"></script>
