Add : About Section

--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>MY Story Behind the code </h2>
-                <p>Hello! I'm a passionate designer and developer who loves bringing characters and stories to life through digital art. My journey began with doodles in the margins of my notebooks and has evolved into creating engaging digital experiences.</p>
+                <p>Hello! I'm a passionate designer and developer Who have completed my bachelor Degree in B.A (Epp) from Andhra Mahila Sabha Arts and Science College For Women </p>
                 <p>I believe that great design should not only look good but also tell a story and create an emotional connection with the audience. My work combines technical expertise with creative storytelling to deliver memorable experiences.</p>
                 <p>When I'm not designing or coding, you can find me sketching new characters, playing indie games, or enjoying animated films for inspiration.</p>
                 <a href="#contact" class="btn">Get In Touch</a>
@@ -123,7 +123,7 @@
             <a href="#"><i class="fab fa-dribbble"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
-        <p>&copy; 2023 Shirisha Portfolio. All rights reserved.</p>
+        <p>&copy; 2024 Shirisha Portfolio. All rights reserved.</p>
     </footer>
 
     <script src="./Main.js"></script>
