--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
             <div class="about-image">
-                <div class="cartoon-avatar"></div>
+                <img src="/profile.jpg" alt="">
             </div>
         </div>
     </section>
@@ -110,7 +110,7 @@
                 </div>
                 <h3>Crud Application</h3>
                 <p>Developed an interactive storybook game where players make choices that affect the narrative outcome. The project combined illustration, animation, and game logic to create an immersive storytelling experience.</p>
-                <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                <a href="" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -118,10 +118,10 @@
     <!-- Footer -->
     <footer>
         <div class="social-links">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shirisha-baasani/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/shirishagit"><i class="fab fa-github"></i></a>
+             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-dribbble"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <p>&copy; 2024 Shirisha Portfolio. All rights reserved.</p>
     </footer>
