Added new changes

--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
         <div class="skills-container">
             <div class="skill-card">
                 <div class="skill-icon">
-                    <i class="fas fa-pencil-alt"></i>
+                <i class="fa-brands fa-java"></i>
                 </div>
                 <h3>Java</h3>
                 <p>Creating unique and engaging cartoon characters and illustrations that bring stories to life.</p>
@@ -44,21 +44,21 @@
                 <div class="skill-icon">
                     <i class="fas fa-code"></i>
                 </div>
-                <h3>Web Development</h3>
+                <h3>React.js</h3>
                 <p>Building responsive and interactive websites with clean code and modern technologies.</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">
                     <i class="fas fa-mobile-alt"></i>
                 </div>
-                <h3>UI/UX Design</h3>
+                <h3>HTML/CSS</h3>
                 <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">
-                    <i class="fas fa-gamepad"></i>
+                  <i class="fa-brands fa-github"></i>
                 </div>
-                <h3>React.Js</h3>
+                <h3>Git/Github</h3>
                 <p>Creating smooth and engaging animations that enhance user interaction and storytelling.</p>
             </div>
         </div>
