--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation with Glass Effect -->
     <nav>
-        <div class="logo">SHIRISHA.<span>BASANI</span></div>
+        <div class="logo">Shirisha.<span>Basani</span></div>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#skills">Skills</a>
