Added new section

--- a/Index.html
+++ b/Index.html
@@ -115,6 +115,10 @@
         </div>
     </section>
 
+    <section>
+        <h1>Education background</h1>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="social-links">
