Add new section

--- a/Index.html
+++ b/Index.html
@@ -115,10 +115,13 @@
         </div>
     </section>
 
-    <section>
-        <h1>Education background</h1>
+ <section id="education">
+        <div class="hero-content">
+            <h1>Education</h1>
+            
+        </div>
+        <div class="cartoon-character"></div>
     </section>
-
     <!-- Footer -->
     <footer>
         <div class="social-links">
