Added new icons

--- a/Index.html
+++ b/Index.html
@@ -61,6 +61,36 @@
                 <h3>Git/Github</h3>
                 <p>Creating smooth and engaging animations that enhance user interaction and storytelling.</p>
             </div>
+             <div class="skill-card">
+                <div class="skill-icon">
+        <i class="fa-solid fa-leaf"></i>
+
+                </div>
+                <h3>SpringBoot</h3>
+                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+            </div>
+             <div class="skill-card">
+                <div class="skill-icon">
+                        <i class="fa-solid fa-database"></i>
+                </div>
+                <h3>Mysql</h3>
+                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+            </div>
+             <div class="skill-card">
+                <div class="skill-icon">
+                    <i class="fa-solid fa-database"></i>
+                </div>
+                <h3>MangoDB</h3>
+                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+            </div>
+             <div class="skill-card">
+                <div class="skill-icon">
+                  <i class="fab fa-js"></i>
+
+                </div>
+                <h3>JavaScript</h3>
+                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+            </div>
         </div>
     </section>
 
