Added new Content

--- a/Index.html
+++ b/Index.html
@@ -146,11 +146,43 @@
     </section>
 
  <section id="education">
-        <div class="hero-content">
-            <h1>Education</h1>
-            
-        </div>
-        <div class="cartoon-character"></div>
+     <h1>Education</h1> 
+        <div class="education-content">
+            <table class="education-table">
+  <tr>
+    <th>Degree</th>
+    <th>Institution</th>
+    <th>Year</th>
+    <th>Percentage/CGPA</th>
+    <th>Location</th>
+  </tr>
+
+  <tr>
+    <td>Bachelor of Arts B.A-(epp)</td>
+    <td>Andhra Mahila Sabha Arts And Science college For women</td>
+    <td>2025</td>
+    <td>82.2 CGPA</td>
+    <td>Hyderabad</td>
+  </tr>
+
+  <tr>
+    <td>Intermediate :CEC</td>
+    <td>Telangana Model Junior College</td>
+    <td>2022</td>
+    <td>86%</td>
+    <td>Nalgonda</td>
+  </tr>
+
+  <tr>
+    <td>SSC</td>
+    <td> Cambridge Grammer High School Name</td>
+    <td>2020</td>
+    <td>9.3 CGPA</td>
+    <td>Hyderabad</td>
+  </tr>
+</table>
+
+  </div>
     </section>
     <!-- Footer -->
     <footer>
