--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     <section id="home">
         <div class="hero-content">
             <h1>HELLO, I'M SHIRISHA BASANI</h1>
-            <p>A passionate designer & developer creating fun and engaging digital experiences with code!</p>
+            <p>From non-tech beginnings to full-stack development — driven by curiosity, discipline, and real project experience</p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
         <div class="cartoon-character"></div>
@@ -38,28 +38,28 @@
                 <i class="fa-brands fa-java"></i>
                 </div>
                 <h3>Java</h3>
-                <p>Creating unique and engaging cartoon characters and illustrations that bring stories to life.</p>
+                <p>A powerful, object-oriented programming language used to build scalable applications</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">
                     <i class="fas fa-code"></i>
                 </div>
                 <h3>React.js</h3>
-                <p>Building responsive and interactive websites with clean code and modern technologies.</p>
+                <p>A JavaScript library for building fast, dynamic, and component-based user interfaces. </p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">
                     <i class="fas fa-mobile-alt"></i>
                 </div>
                 <h3>HTML/CSS</h3>
-                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+                <p>The fundamental building blocks for structuring and styling modern web pages.</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">
                   <i class="fa-brands fa-github"></i>
                 </div>
                 <h3>Git/Github</h3>
-                <p>Creating smooth and engaging animations that enhance user interaction and storytelling.</p>
+                <p>Tools for version control and collaborative code management, helping track changes and streamline development.</p>
             </div>
              <div class="skill-card">
                 <div class="skill-icon">
@@ -67,29 +67,28 @@
 
                 </div>
                 <h3>SpringBoot</h3>
-                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+                <p>A Java framework that simplifies building fast, production-ready backend APIs.</p>
             </div>
              <div class="skill-card">
                 <div class="skill-icon">
                         <i class="fa-solid fa-database"></i>
                 </div>
                 <h3>Mysql</h3>
-                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+                <p>A popular relational database system for storing and managing structured data.</p>
             </div>
              <div class="skill-card">
                 <div class="skill-icon">
                     <i class="fa-solid fa-database"></i>
                 </div>
                 <h3>MangoDB</h3>
-                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+                <p>A NoSQL database designed for flexible, document-based data storage.</p>
             </div>
              <div class="skill-card">
                 <div class="skill-icon">
                   <i class="fab fa-js"></i>
-
                 </div>
                 <h3>JavaScript</h3>
-                <p>Designing intuitive user interfaces with a focus on user experience and accessibility.</p>
+                <p>The core scripting language of the web that adds interactivity to websites.</p>
             </div>
         </div>
     </section>
@@ -100,7 +99,12 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>MY Story Behind the code </h2>
-                <p>Hello! I'm a passionate designer and developer Who have completed my bachelor Degree in B.A (Epp) from Andhra Mahila Sabha Arts and Science College For Women </p>
+                <p>I started my tech journey as a B.A graduate with zero technical background, learning everything from scratch through YouTube and self-study. With consistent practice, I built real projects that helped me understand both frontend and backend development.
+
+             Along the way, <p>I learned and worked with
+             Java, Spring Boot, JavaScript, React.js, MySQL, MongoDB, HTML, CSS, Git, GitHub, and DSA.<p/>
+
+             Through self-made projects, I gained practical experience and grew from a beginner into a confident developer capable of building full-stack applications. My journey reflects self-motivation, discipline, and a strong desire to grow in the tech world.</p>
                 <p></p>
                 <p></p>
                 <a href="#contact" class="btn">Get In Touch</a>
@@ -115,14 +119,25 @@
     <section id="projects">
         <h2 class="section-title">MY PROJECTS</h2>
         <div class="blog-container">
+                 <div class="blog-post">
+                <div class="blog-meta">
+                    <span><i class="far fa-calendar"></i> Nov 24, 2025</span>
+                    <span><i class="far fa-folder"></i>Our Blog</span>
+                </div>
+                <h3>Our Blog website</h3>
+                <p>Our Blog – A full-stack blogging platform built with React.js, Node.js, Express, and MongoDB. It allows users to read, publish, and manage blogs with a smooth and responsive UI. The project includes secure APIs, dynamic content management, and a fully deployed frontend and backend for real-world performance.</p>
+                <a href="https://our-blog-froentend.vercel.app/" class="read-more">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
             <div class="blog-post">
                 <div class="blog-meta">
                     <span><i class="far fa-calendar"></i> Sep 15, 2025</span>
                     <span><i class="far fa-folder"></i> TO-DO APP</span>
                 </div>
                 <h3>To Do App</h3>
-                <p>Created a fully responsive portfolio website with custom cartoon animations and interactive elements. The project involved character design, motion graphics, and front-end development using HTML, CSS, and JavaScript.</p>
-                <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                <p>To-Do Application – A simple and efficient task-management app built using JavaScript, HTML, and CSS.
+It allows users to add, edit, and delete tasks with a clean and responsive interface.
+Designed to improve daily productivity and showcase core frontend development skills.</p>
+                <a href="https://glowing-bavarois-c54c33.netlify.app" class="read-more">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="blog-post">
                 <div class="blog-meta">
@@ -130,18 +145,13 @@
                     <span><i class="far fa-folder"></i> Currency Converter</span>
                 </div>
                 <h3>Currency Converter</h3>
-                <p>Designed and illustrated a series of original cartoon characters for a children's educational app. Each character has unique personality traits and animations that help engage young learners with the content.</p>
-                <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                <p>Currency Converter – A simple yet efficient web app built using HTML, CSS, and JavaScript 
+                    that allows users to convert currencies in real time. It features a clean UI, smooth interactions, 
+                    and accurate exchange rate calculations through API integration. This project showcases my ability to build responsive, 
+                    user-focused web applications from scratch.</p>
+                <a href="https://github.com/shirishagit/CURRENCY-CONVERTER" class="read-more">View Project <i class="fas fa-arrow-right"></i></a>
             </div>
-            <div class="blog-post">
-                <div class="blog-meta">
-                    <span><i class="far fa-calendar"></i> May 10, 2025</span>
-                    <span><i class="far fa-folder"></i> Crud Application</span>
-                </div>
-                <h3>Crud Application</h3>
-                <p>Developed an interactive storybook game where players make choices that affect the narrative outcome. The project combined illustration, animation, and game logic to create an immersive storytelling experience.</p>
-                <a href="" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
-            </div>
+       
         </div>
     </section>
 
@@ -167,7 +177,7 @@
 
   <tr>
     <td>Intermediate :CEC</td>
-    <td>Telangana Model Junior College</td>
+    <td>Telangana State Model Junior College</td>
     <td>2020-2022</td>
     <td>86%</td>
     <td>Nalgonda</td>
@@ -176,7 +186,7 @@
   <tr>
     <td>SSC</td>
     <td>Cambridge Grammer High School Name</td>
-    <td>2020</td>
+    <td>2019-2020</td>
     <td>9.3 CGPA</td>
     <td>Hyderabad</td>
   </tr>
@@ -186,11 +196,16 @@
     </section>
     <!-- Footer -->
     <footer>
+        <div class="contact-section">
+  <h2>Contact Me</h2>
+  <div class="contact-info">
+    <p><strong>Email:</strong> shirisha.baasani@gmail.com</p>
+     <p><strong>Phone:</strong> +91-9441933042</p>
+  </div>
+</div>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/shirisha-baasani/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/shirishagit"><i class="fab fa-github"></i></a>
-             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-dribbble"></i></a>
         </div>
         <p>&copy; 2024 Shirisha Portfolio. All rights reserved.</p>
     </footer>
