--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,22 @@
 <body>
     <!-- Navigation with Glass Effect -->
     <nav>
-        <div class="logo">Shirisha.<span>Basani</span></div>
-        <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#skills">Skills</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-        </div>
-    </nav>
+    <div class="logo">Shirisha.<span>Basani</span></div>
+
+    <!-- Hamburger Icon -->
+    <div class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div class="nav-links" id="nav-links">
+        <a href="#home">Home</a>
+        <a href="#skills">Skills</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+    </div>
+</nav>
+
 
     <!-- Home Section -->
     <section id="home">
@@ -107,7 +115,7 @@
              Through self-made projects, I gained practical experience and grew from a beginner into a confident developer capable of building full-stack applications. My journey reflects self-motivation, discipline, and a strong desire to grow in the tech world.</p>
                 <p></p>
                 <p></p>
-                <a href="#contact" class="btn">Get In Touch</a>
+                <a href="#contact-section" class="btn">Get In Touch</a>
             </div>
             <div class="about-image">
                 <img src="/profile.jpg" alt="">
@@ -195,7 +203,7 @@ Designed to improve daily productivity and showcase core frontend development sk
   </div>
     </section>
     <!-- Footer -->
-    <footer>
+    <footer id="contact-section">
         <div class="contact-section">
   <h2>Contact Me</h2>
   <div class="contact-info">
@@ -210,6 +218,6 @@ Designed to improve daily productivity and showcase core frontend development sk
         <p>&copy; 2024 Shirisha Portfolio. All rights reserved.</p>
     </footer>
 
-    <script src="./Main.js"></script>
+    <script src="./Script.js"></script>
 </body>
 </html>
